src/objects/Command__c.object
<CustomObject>
    <fields>
        <fullName>Action_Confirmation__c</fullName>
        <inlineHelpText>Optional response posted once action confirmation is received from Arduino</inlineHelpText>
        <label>Action Confirmation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Action_Value__c</fullName>
        <inlineHelpText>If setting a non-boolean status, the value for that status</inlineHelpText>
        <label>Action Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actions__c</fullName>
        <inlineHelpText>What action to perform when the Command Text is used. Options are to toggle the object on/off (if applicable), or to set the status of a Thing by providing a value</inlineHelpText>
        <label>Actions</label>
        <picklist>
            <picklistValues>
                <fullName>On</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Command_Text__c</fullName>
        <inlineHelpText>The text (case insensitive) that triggers this command when used in Chatter</inlineHelpText>
        <label>Command Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Formula_Response__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The command to execute when the status formula is true.</inlineHelpText>
        <label>Formula Response</label>
        <referenceTo>Command__c</referenceTo>
        <relationshipLabel>Commands</relationshipLabel>
        <relationshipName>Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Limit_to_User__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Limit the query results only to those records owned by the calling user.</inlineHelpText>
        <label>Limit to User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Match_Type__c</fullName>
        <inlineHelpText>Determine how the Chatter message pattern is matched to the available commands. &quot;Starts With&quot; will match only for messages that begin with the command text (excluding any @metions to Chatty).  Contains will match the command text anywhere in a valid post.</inlineHelpText>
        <label>Match Type</label>
        <picklist>
            <picklistValues>
                <fullName>Starts With</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Contains</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Query_Limit__c</fullName>
        <label>Query Limit</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Query_Order_By__c</fullName>
        <label>Query Order By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Query_Parameters__c</fullName>
        <inlineHelpText>Query parameters including WHERE, LIMITS and ORDER BY</inlineHelpText>
        <label>Query Parameters</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Query__c</fullName>
        <inlineHelpText>SOQL results to be displayed on request</inlineHelpText>
        <label>Query</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Response_Text__c</fullName>
        <inlineHelpText>The optional text Chatty uses to respond when the given command is successfully completed.</inlineHelpText>
        <label>Response Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status_Formula__c</fullName>
        <inlineHelpText>Optional formula that causes this Command to fire when its Thing&apos;s status meets the formula criteria.</inlineHelpText>
        <label>Status Formula</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Thing__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Thing this Command controls (if possible) or provides a reading for (if passive)</inlineHelpText>
        <label>Thing</label>
        <referenceTo>Thing__c</referenceTo>
        <relationshipLabel>Commands</relationshipLabel>
        <relationshipName>Commands</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Command</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Command_Text__c</columns>
        <columns>Match_Type__c</columns>
        <columns>Status_Formula__c</columns>
        <columns>Response_Text__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Formula_Response__c</columns>
        <columns>Actions__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Command-{00000000}</displayFormat>
        <label>Command</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commands</pluralLabel>
    <recordTypes>
        <fullName>Action</fullName>
        <active>true</active>
        <description>Controls on/off or scaled real world things</description>
        <label>Action</label>
    </recordTypes>
    <recordTypes>
        <fullName>Chat</fullName>
        <active>true</active>
        <description>Request and responses from Chatty</description>
        <label>Chat</label>
    </recordTypes>
    <recordTypes>
        <fullName>Query</fullName>
        <active>true</active>
        <description>Performs a dynamic query and returns the results</description>
        <label>Query</label>
    </recordTypes>
    <recordTypes>
        <fullName>Status</fullName>
        <active>true</active>
        <description>Returns the status of a physical Thing. Can also be automatically triggered by reported readings.</description>
        <label>Status</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Set_Status_Needs_Value</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Actions__c, &apos;Value&apos;),  ISNULL(Action_Value__c ))</errorConditionFormula>
        <errorMessage>Must provide a value when setting the status for a non-boolean Thing.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Valid_Status_Formula</fullName>
        <active>true</active>
        <description>Checks that a text formula includes a boolean value for evaluation</description>
        <errorConditionFormula>IF(NOT(ISBLANK( Status_Formula__c)),
NOT(
OR(
BEGINS( Status_Formula__c, &quot;&gt;&quot;),
BEGINS(Status_Formula__c, &quot;&lt;&quot;),
BEGINS(Status_Formula__c, &quot;!=&quot;),
BEGINS(Status_Formula__c, &quot;=&quot;)
))
, false)</errorConditionFormula>
        <errorDisplayField>Status_Formula__c</errorDisplayField>
        <errorMessage>A status formula must begin with one of the following operators:
&gt;, &lt;, =, !=</errorMessage>
    </validationRules>
</CustomObject>